--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tabs": "^1.0.4",
+        "@tanstack/react-query": "^5.29.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "lucide-react": "^0.371.0",
@@ -30,6 +31,7 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@tanstack/eslint-plugin-query": "^5.28.11",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
