--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tabs": "^1.0.4",
+        "@radix-ui/react-tooltip": "^1.0.7",
         "@tanstack/react-query": "^5.29.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
@@ -31,6 +32,7 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@svgr/webpack": "^8.1.0",
         "@tanstack/eslint-plugin-query": "^5.28.11",
         "@types/node": "^20",
         "@types/react": "^18",
