--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tabs": "^1.0.4",
+        "@radix-ui/react-toast": "^1.1.5",
         "@radix-ui/react-tooltip": "^1.0.7",
         "@tanstack/react-query": "^5.29.2",
         "class-variance-authority": "^0.7.0",
@@ -27,6 +28,7 @@
         "next": "14.2.2",
         "react": "^18",
         "react-dom": "^18",
+        "react-dropzone": "^14.2.3",
         "react-hook-form": "^7.51.3",
         "tailwind-merge": "^2.2.2",
         "tailwindcss-animate": "^1.0.7",
