--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toast": "^1.1.5",
+        "@radix-ui/react-toggle": "^1.0.3",
         "@radix-ui/react-tooltip": "^1.0.7",
         "@tanstack/react-query": "^5.29.2",
+        "@tiptap/extension-color": "^2.3.0",
+        "@tiptap/extension-text-style": "^2.3.0",
+        "@tiptap/pm": "^2.3.0",
+        "@tiptap/react": "^2.3.0",
+        "@tiptap/starter-kit": "^2.3.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "lucide-react": "^0.371.0",
@@ -30,6 +36,7 @@
         "react-dom": "^18",
         "react-dropzone": "^14.2.3",
         "react-hook-form": "^7.51.3",
+        "sass": "^1.75.0",
         "tailwind-merge": "^2.2.2",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4"
